2001-06-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* texi/message-ja.texi: Use `iso-2022-7bit' instead of
	`iso-2022-7bit-ss2' to keep a compatibility between XEmacsen and
	FSF Emacsen.
	* texi/gnus-ja.texi: Ditto.

2001-06-09  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (top-level): Updated comments.
	(nnshimbun): New customize group.
	(nnshimbun-keep-last-article): Defined as customize variable.
	(nnshimbun-keep-unparsable-dated-articles): Ditto.
	(nnshimbun-insert-nov): Use `when' instead of `if'.
	(gnus-group-shimbun-server-history): Imported from
	`gnus-group.el'.
	(gnus-group-make-shimbun-group): Ditto.

	* lisp/gnus-group.el (gnus-group-make-shimbun-group): Its real
	definition is moved to `nnshimbun.el' and autload code is added.
	(gnus-group-shimbun-server-history): Its definition is moved to
	`nnshimbun.el'.

2001-06-08  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-use-entire-index): Removed.
	(nnshimbun-index-range): New variable.
	(nnshimbun-close-server): Check status strictly to close server
	safely.
	(nnshimbun-generate-nov-database): Refer the group paramter
	`nnshimbun-index-range' as the second parameter of
	`shimbun-headers'.
	(shimbun-mua-use-entire-index): Removed.
	(nnshimbun-request-article-1): Replace a date string in
	`gnus-newsgroup-data' only when article header has non-nil value.
	(nnshimbun-insert-nov): Fixed condition to decide whether
	`X-Nnshimbun-Id' should be inseted or not.

2001-06-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-expire-nov-databases): Removed.
	(nnshimbun-request-expire-articles): Simplified; refer to the
	shimbun's default expiration days.

2001-06-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/lpath.el: Fbind `xml-node-children' for XEmacsen and old FSF
	Emacsen.

2001-06-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Prefer the